# ion

./: .gitignore  CMakeLists.txt  Makefile  Mesh.cpp  Mesh.h  Mouse.cpp  Mouse.h  README.md  camera.h  display.cpp  display.h  geometry.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  vcpkg.json
res/: basicShader.fs  basicShader.vs
src/: CMakeLists.txt  Mesh.h  Mouse.cpp  Mouse.h  camera.h  display.h  geometry.h  main.cpp  shader.cpp  shader.h  stb_image.h  texture.h  transform.h
